<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="30dp">

        <TextView
            android:id="@+id/MiPuntuacion"
            android:text="@string/MiPuntuacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center">

        </TextView>
        <TextView
            android:id="@+id/fantasmas"
            android:text="@string/Fantasmas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textSize="25sp"
            android:gravity="center">

        </TextView>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="500dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/ladron1" />

        <TextView
            android:id="@+id/Uid"
            android:text="@string/Uid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center">

        </TextView>
        <TextView
            android:id="@+id/Correo"
            android:text="@string/Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:gravity="center">

        </TextView>
        <TextView
            android:id="@+id/Nombre"
            android:text="@string/Nombre"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center">

        </TextView>

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/Menutxt"
            android:text="@string/Menutxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:gravity="center">

        </TextView>


        <Button
        android:id="@+id/JugarBTN"
            android:text="@string/JugarBTN"
        android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/boto_personalizado"
        android:layout_height="wrap_content">
    </Button>
        <Button
            android:id="@+id/PuntuacionesBTN"
            android:text="@string/PuntuacionesBTN"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/boto_personalizado"
            android:layout_height="wrap_content">

        </Button>

        <Button
            android:id="@+id/AcercaDeBTN"
            android:text="@string/AcercadeBTN"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/boto_personalizado"
            android:layout_height="wrap_content">

        </Button>
        <Button
            android:id="@+id/CerrarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/boto_personalizado"
            android:layout_alignParentBottom="true"

            android:text="@string/CerrarSession">

        </Button>


    </LinearLayout>
</ScrollView>