<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff"
    android:padding="15dp"
    tools:context=".Registro">
   <LinearLayout
       android:layout_width="match_parent"
       android:gravity="center"
       android:layout_height="wrap_content"
       android:layout_marginTop="80dp">


       <ImageView
           android:id="@+id/imageView"
           android:layout_width="198dp"
           android:layout_height="120dp"
           android:gravity="center"
           app:srcCompat="@drawable/_213460_account_avatar_head_person_profile_user_115386" />
   </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <EditText
            android:id="@+id/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:autofillHints=""
            android:hint="@string/correoEt"
            android:inputType="textEmailAddress">

        </EditText>

        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passEt"
            android:inputType="textPassword">

        </EditText>

        <EditText
            android:id="@+id/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombreEt"
            android:inputType="text">

        </EditText>

        <TextView
            android:id="@+id/fechaTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/fechaTxt"
            android:textSize="20sp">

        </TextView>

        <Button
            android:id="@+id/Registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:background="@drawable/boto_personalizado"
            android:text="@string/Registrar">

        </Button>


    </LinearLayout>


</RelativeLayout>