<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".EscenarioJuego">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/AnchoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AnchoTv"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/AltoTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/AltoTv"
                    android:textColor="@color/white" />


            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="60dp"
                android:layout_height="60dp"

                android:layout_marginStart="10dp"
                android:src="@drawable/pistolas" />


            <TextView
                android:id="@+id/contador"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/TVcontador"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/TVnombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/TVnombre"
                android:textColor="@color/white" />
            <!--ANIMACIÓN-->

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                app:srcCompat="@drawable/clock" />

            <TextView
                android:id="@+id/TVtiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/TVtiempo"
                android:textColor="@color/white" />


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">




            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/TvZombie"
                android:layout_width="120dp"
                android:layout_height="120dp"

                android:src="@drawable/zombie" />


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>