<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ImagenJugador"
        android:layout_marginStart="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/policia" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginStart="40dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/NombreJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/NombreJugador"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/CorreoJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/CorreoJugador"
            android:textSize="20sp">

        </TextView>

        <TextView
            android:id="@+id/puntajeJugador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/puntajeJugador"
            android:textSize="20sp">

        </TextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
</androidx.cardview.widget.CardView>