<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".login">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="178dp"
        android:layout_height="263dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/police_hand_cuffs_with_chain_icon_icons_com_70646" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="25dp">


        <EditText
            android:id="@+id/correoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/correLogin"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"></EditText>


        <EditText
            android:id="@+id/passLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passLogin"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#757575"

            />


        <Button
            android:id="@+id/botonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botonLogin"
            android:layout_marginTop="10dp"
            android:background="@drawable/boto_personalizado"
            >

        </Button>


    </LinearLayout>

</RelativeLayout>
